samples/_failures_safe/1761595595_4bc8ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5da3d1ba.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_5da3d1ba.c:128:20: error: missing terminating " character
  128 |             printf("%s [%s
      |                    ^~~~~~~
./samples/SAFE/__tmp_5da3d1ba.c:128:13: error: expected expression at end of input
  128 |             printf("%s [%s
      |             ^~~~~~
./samples/SAFE/__tmp_5da3d1ba.c:128:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5da3d1ba.c:128:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5da3d1ba.c:128:13: error: expected declaration or statement at end of input
